# snake

./: CMakeLists.txt  README.md  food.c  food.h  main.c  map.c  map.h  snake.c  snake.h  ui.c  ui.h
src/: food.c  food.h  help.c  help.h  main.c  map.c  map.h  menu.c  menu.h  setting.c  setting.h  snake.c  snake.h  ui.c  ui.h
